include/slang/c/slang.h


#define SLANG_C_VERSION_MAJOR 1
#define SLANG_C_VERSION_MINOR 3
#define SLANG_C_VERSION_ENCODE(major, minor) ((uint32_t)(major) * 10000u + (uint32_t)(minor))
#define SLANG_C_VERSION SLANG_C_VERSION_ENCODE(SLANG_C_VERSION_MAJOR, SLANG_C_VERSION_MINOR)
typedef enum slang_status {
    SLANG_WARN_TRUNCATED = -2,
    SLANG_WARN_PARTIAL = -1,
    SLANG_OK = 0,
    SLANG_ERR_IO = 1,
    SLANG_ERR_INVALID_ARG = 2,
    SLANG_ERR_INVALID_STATE = 3,
    SLANG_ERR_PARSE_RECURSION = 4,
    SLANG_ERR_REWRITE = 5,
    SLANG_ERR_OUT_OF_MEMORY = 6,
    SLANG_ERR_UNSUPPORTED = 7,
    SLANG_ERR_ABI_MISMATCH = 8,
    SLANG_ERR_CANCELLED = 9,
    SLANG_ERR_INTERNAL = 100,
} slang_status;
typedef struct slang_error {
    slang_status status;
    char message[248];
} slang_error;
#define SLANG_ERROR_INIT {SLANG_OK, {0}}
typedef enum slang_build_flag {
    SLANG_BUILD_EXCEPTIONS = 1u << 0,
    SLANG_BUILD_ASSERTIONS = 1u << 1,
    SLANG_BUILD_THREADS = 1u << 2,
} slang_build_flag;
typedef struct slang_str {
    const char* data;
    size_t len;
    void* owner;
} slang_str;
SLANG_C_API void slang_str_free(slang_str str);
typedef uint32_t slang_buffer_id;
typedef struct slang_loc {
    slang_buffer_id buffer;
    uint32_t reserved_;
    uint64_t offset;
} slang_loc;
typedef struct slang_range {
    slang_loc start;
    slang_loc end;
} slang_range;
typedef struct slang_source_manager_t* slang_source_manager;
typedef struct slang_syntax_tree_t* slang_syntax_tree;
typedef struct slang_compilation_t* slang_compilation;
typedef struct slang_diagnostics_t* slang_diagnostics;
typedef struct slang_options_t* slang_options;
typedef struct slang_node {
    const void* ptr;
    slang_syntax_tree tree;
    uint32_t kind;
    uint32_t reserved_;
} slang_node;
typedef struct slang_token {
    const void* owner;
    slang_syntax_tree tree;
    uint32_t index;
    uint16_t kind;
    uint16_t flags;
} slang_token;
typedef enum slang_token_flag {
    SLANG_TOKEN_MISSING = 1u << 0,
} slang_token_flag;
typedef enum slang_ast_domain {
    SLANG_AST_SYMBOL = 0,
    SLANG_AST_EXPRESSION = 1,
    SLANG_AST_STATEMENT = 2,
    SLANG_AST_TIMING_CONTROL = 3,
    SLANG_AST_CONSTRAINT = 4,
    SLANG_AST_ASSERTION_EXPR = 5,
    SLANG_AST_BINS_SELECT_EXPR = 6,
    SLANG_AST_PATTERN = 7,
} slang_ast_domain;
typedef struct slang_ast {
    const void* ptr;
    slang_compilation compilation;
    uint32_t kind;
    uint32_t domain;
} slang_ast;
typedef struct slang_randseq_prod {
    const void* ptr;
    slang_compilation compilation;
    uint32_t kind;
    uint32_t reserved_;
} slang_randseq_prod;
static_assert(sizeof(slang_node) == 2 * sizeof(void*) + 8, "slang_node ABI");
static_assert(sizeof(slang_token) == 2 * sizeof(void*) + 8, "slang_token ABI");
static_assert(sizeof(slang_ast) == 2 * sizeof(void*) + 8, "slang_ast ABI");
static_assert(sizeof(slang_randseq_prod) == 2 * sizeof(void*) + 8,
              "slang_randseq_prod ABI");
static_assert(sizeof(slang_loc) == 16, "slang_loc ABI");
static_assert(sizeof(slang_error) == 252, "slang_error ABI");
typedef enum slang_member_form {
    SLANG_MEMBER_TOKEN = 0,
    SLANG_MEMBER_NODE = 1,
    SLANG_MEMBER_OPTIONAL_NODE = 2,
    SLANG_MEMBER_LIST = 3,
    SLANG_MEMBER_SEPARATED_LIST = 4,
    SLANG_MEMBER_TOKEN_LIST = 5,
} slang_member_form;
typedef enum slang_language_version {
    SLANG_LANGUAGE_1364_2005 = 0,
    SLANG_LANGUAGE_1800_2017 = 1,
    SLANG_LANGUAGE_1800_2023 = 2,
} slang_language_version;
typedef enum slang_compilation_flag {
    SLANG_COMP_ALLOW_HIERARCHICAL_CONST = 1u << 0,
    SLANG_COMP_RELAX_ENUM_CONVERSIONS = 1u << 1,
    SLANG_COMP_ALLOW_USE_BEFORE_DECLARE = 1u << 2,
    SLANG_COMP_ALLOW_TOP_LEVEL_IFACE_PORTS = 1u << 3,
    SLANG_COMP_LINT_MODE = 1u << 4,
    SLANG_COMP_IGNORE_UNKNOWN_MODULES = 1u << 5,
    SLANG_COMP_RELAX_STRING_CONVERSIONS = 1u << 6,
    SLANG_COMP_ALLOW_RECURSIVE_IMPLICIT_CALL = 1u << 7,
    SLANG_COMP_ALLOW_BARE_VAL_PARAM_ASSIGNMENT = 1u << 8,
    SLANG_COMP_ALLOW_SELF_DETERMINED_STREAM_CONCAT = 1u << 9,
    SLANG_COMP_ALLOW_MERGING_ANSI_PORTS = 1u << 10,
    SLANG_COMP_DISABLE_INSTANCE_CACHING = 1u << 11,
    SLANG_COMP_DISALLOW_REFS_TO_UNKNOWN_INSTANCES = 1u << 12,
    SLANG_COMP_ALLOW_UNNAMED_GENERATE = 1u << 13,
    SLANG_COMP_ALLOW_VIRTUAL_IFACE_WITH_OVERRIDE = 1u << 14,
    SLANG_COMP_ALLOW_ARRAY_CONCAT_ASSIGN_PATTERN = 1u << 15,
    SLANG_COMP_ALLOW_CROSS_AUTO_BIN_MAX = 1u << 16,
    SLANG_COMP_ALLOW_INVALID_TOP = 1u << 17,
    SLANG_COMP_CHECK_UNINSTANTIATED = 1u << 18,
} slang_compilation_flag;
typedef enum slang_child_tag {
    SLANG_CHILD_NONE = 0,
    SLANG_CHILD_NODE = 1,
    SLANG_CHILD_TOKEN = 2,
} slang_child_tag;
typedef struct slang_trivia {
    uint32_t kind;
    uint32_t reserved_;
    slang_str text;
} slang_trivia;
typedef enum slang_visit {
    SLANG_VISIT_BREAK = 0,
    SLANG_VISIT_CONTINUE = 1,
    SLANG_VISIT_SKIP = 2,
} slang_visit;
typedef slang_visit (*slang_node_visitor)(slang_node node, void* user);
typedef enum slang_severity {
    SLANG_SEVERITY_IGNORED = 0,
    SLANG_SEVERITY_NOTE = 1,
    SLANG_SEVERITY_WARNING = 2,
    SLANG_SEVERITY_ERROR = 3,
    SLANG_SEVERITY_FATAL = 4,
} slang_severity;
typedef struct slang_diag {
    uint32_t code;
    slang_severity severity;
    slang_loc location;
    uint32_t note_count;
    uint32_t range_count;
} slang_diag;
typedef struct slang_constant_t* slang_constant;
typedef struct slang_svint_t* slang_svint; 
typedef enum slang_constant_kind {
    SLANG_CONSTANT_BAD = 0,
    SLANG_CONSTANT_INTEGER = 1,
    SLANG_CONSTANT_REAL = 2,
    SLANG_CONSTANT_SHORTREAL = 3,
    SLANG_CONSTANT_STRING = 4,
    SLANG_CONSTANT_NULL = 5,
    SLANG_CONSTANT_UNBOUNDED = 6,
    SLANG_CONSTANT_UNPACKED = 7, 
    SLANG_CONSTANT_MAP = 8,
    SLANG_CONSTANT_QUEUE = 9,
    SLANG_CONSTANT_UNION = 10,
} slang_constant_kind;
typedef struct slang_svint_flat {
    int64_t value;
    uint32_t bit_width;
    bool is_signed;
    bool has_unknown;
} slang_svint_flat;
typedef struct slang_value_driver {
    const void* ptr;
    slang_analysis analysis;
} slang_value_driver;
static_assert(sizeof(slang_value_driver) == 2 * sizeof(void*), "slang_value_driver ABI");
typedef struct slang_value_path {
    const void* ptr;
    slang_analysis analysis;
} slang_value_path;
static_assert(sizeof(slang_value_path) == 2 * sizeof(void*), "slang_value_path ABI");
typedef struct slang_analyzed_procedure {
    const void* ptr;
    slang_analysis analysis;
} slang_analyzed_procedure;
typedef struct slang_analyzed_assertion {
    const void* ptr;
    slang_analysis analysis;
} slang_analyzed_assertion;
typedef struct slang_implicit_event_read_set {
    const void* ptr;
    slang_analysis analysis;
} slang_implicit_event_read_set;
typedef struct slang_read_range {
    const void* ptr;
    slang_analysis analysis;
} slang_read_range;
typedef struct slang_sensitivity_list {
    const void* ptr;
    slang_analysis analysis;
} slang_sensitivity_list;
static_assert(sizeof(slang_analyzed_procedure) == 2 * sizeof(void*), "slang_analyzed_procedure ABI");
static_assert(sizeof(slang_analyzed_assertion) == 2 * sizeof(void*), "slang_analyzed_assertion ABI");
static_assert(sizeof(slang_implicit_event_read_set) == 2 * sizeof(void*),
             "slang_implicit_event_read_set ABI");
static_assert(sizeof(slang_read_range) == 2 * sizeof(void*), "slang_read_range ABI");
static_assert(sizeof(slang_sensitivity_list) == 2 * sizeof(void*), "slang_sensitivity_list ABI");