source/capi/CApiInternal.h

 
struct slang_source_manager_t {
    std::unique_ptr<slang::SourceManager> owned;
    slang::SourceManager& sm;
    slang_source_manager_t() : owned(std::make_unique<slang::SourceManager>()), sm(*owned) {}
    explicit slang_source_manager_t(slang::SourceManager& borrowed) : sm(borrowed) {}
};
struct slang_options_t {
    slang::parsing::PreprocessorOptions pp;
    slang::parsing::LexerOptions lexer;
    slang::parsing::ParserOptions parser;
    slang::ast::CompilationOptions comp;
    slang::Bag toBag() const {
        slang::Bag bag;
        bag.set(pp);
        bag.set(lexer);
        bag.set(parser);
        bag.set(comp);
        return bag;
    }
};
struct slang_syntax_tree_t {
    std::shared_ptr<slang::syntax::SyntaxTree> tree;
    slang_source_manager sm;
    std::atomic<uint32_t> refs{1};
};
struct slang_compilation_t {
    std::shared_ptr<slang::ast::Compilation> comp;
    std::vector<slang_syntax_tree> trees;
    slang_source_manager sm = nullptr;
    bool sealed = false;
    bool elaboratedAll = false;
    explicit slang_compilation_t(const slang::Bag& options) :
        comp(std::make_shared<slang::ast::Compilation>(options)) {}
    explicit slang_compilation_t(std::unique_ptr<slang::ast::Compilation> existing) :
        comp(std::move(existing)) {}
    explicit slang_compilation_t(slang::ast::Compilation& borrowed) :
        comp(&borrowed, [](slang::ast::Compilation*) {}) {}
};
struct slang_diagnostics_t {
    std::vector<slang::Diagnostic> diags;
    slang_source_manager sm;
    slang_compilation comp; 
    std::unique_ptr<slang::DiagnosticEngine> engine;
    slang::DiagnosticEngine& getEngine() {
        if (!engine)
            engine = std::make_unique<slang::DiagnosticEngine>(sm->sm);
        return *engine;
    }
};
struct slang_constant_t {
    slang::ConstantValue value;
};
inline slang_str owned(std::string&& s) {
    auto* p = new std::string(std::move(s));
    return slang_str{p->data(), p->size(), p};
}