rust/sv-lang-sys/src/lib.rs

//! Raw FFI bindings to slang-c, the stable C API of the
//! [slang](https://sv-lang.com) SystemVerilog compiler frontend.
//!
//! This crate mirrors `include/slang/c/slang.h` declaration for declaration.
//! Everything here is `unsafe` and follows the C header's ownership rules;
//! read that header's preamble before using any of it directly. The safe
//! `sv-lang` crate is the intended consumer.
//!
//! Enumerations are exposed as integer type aliases plus constants, so that
//! values added by a newer library never become undefined behavior here.
#![no_std]
#![allow(
    non_camel_case_types,
    non_upper_case_globals,
    clippy::missing_safety_doc
)]

use core::ffi::{c_char, c_int, c_uint, c_void};

// ---- Versioning -------------------------------------------------------------

/// `SLANG_C_VERSION_MAJOR` the declarations in this crate were generated for.
pub const SLANG_C_VERSION_MAJOR: u32 = 1;
/// `SLANG_C_VERSION_MINOR` the declarations in this crate were generated for.
pub const SLANG_C_VERSION_MINOR: u32 = 0;
/// Encoded as by `SLANG_C_VERSION_ENCODE`.
pub const SLANG_C_VERSION: u32 = SLANG_C_VERSION_MAJOR * 10000 + SLANG_C_VERSION_MINOR;

// ---- Status and errors ------------------------------------------------------

pub type slang_status = c_int;
pub const SLANG_WARN_TRUNCATED: slang_status = -2;
pub const SLANG_WARN_PARTIAL: slang_status = -1;
pub const SLANG_OK: slang_status = 0;
pub const SLANG_ERR_IO: slang_status = 1;
pub const SLANG_ERR_INVALID_ARG: slang_status = 2;
pub const SLANG_ERR_INVALID_STATE: slang_status = 3;
pub const SLANG_ERR_PARSE_RECURSION: slang_status = 4;
pub const SLANG_ERR_REWRITE: slang_status = 5;
pub const SLANG_ERR_OUT_OF_MEMORY: slang_status = 6;
pub const SLANG_ERR_UNSUPPORTED: slang_status = 7;
pub const SLANG_ERR_ABI_MISMATCH: slang_status = 8;
pub const SLANG_ERR_CANCELLED: slang_status = 9;
pub const SLANG_ERR_INTERNAL: slang_status = 100;

/// The in/out error record passed as the last parameter of fallible calls.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct slang_error {
    pub status: slang_status,
    pub message: [c_char; 248],
}

impl slang_error {
    /// Equivalent of `SLANG_ERROR_INIT`.
    pub const INIT: slang_error = slang_error {
        status: SLANG_OK,
        message: [0; 248],
    };
}

impl Default for slang_error {
    fn default() -> Self {
        Self::INIT
    }
}

// ---- Library information ----------------------------------------------------

pub type slang_build_flag = c_uint;
pub const SLANG_BUILD_EXCEPTIONS: slang_build_flag = 1 << 0;
pub const SLANG_BUILD_ASSERTIONS: slang_build_flag = 1 << 1;
pub const SLANG_BUILD_THREADS: slang_build_flag = 1 << 2;

// ---- Strings ----------------------------------------------------------------

/// A string view; owned when `owner` is non-null (free with [`slang_str_free`]).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct slang_str {
    pub data: *const c_char,
    pub len: usize,
    pub owner: *mut c_void,
}

// ---- Source locations -------------------------------------------------------

pub type slang_buffer_id = u32;

#[repr(C)]
#[derive(Clone, Copy, Debug, Default, PartialEq, Eq, Hash)]
pub struct slang_loc {
    pub buffer: slang_buffer_id,
    pub reserved_: u32,
    pub offset: u64,
}

#[repr(C)]
#[derive(Clone, Copy, Debug, Default, PartialEq, Eq, Hash)]
pub struct slang_range {
    pub start: slang_loc,
    pub end: slang_loc,
}

// ---- Owners -----------------------------------------------------------------

#[repr(C)]
pub struct slang_source_manager_t {
    _private: [u8; 0],
}
#[repr(C)]
pub struct slang_syntax_tree_t {
    _private: [u8; 0],
}
#[repr(C)]
pub struct slang_compilation_t {
    _private: [u8; 0],
}
#[repr(C)]
pub struct slang_diagnostics_t {
    _private: [u8; 0],
}
#[repr(C)]
pub struct slang_options_t {
    _private: [u8; 0],
}

pub type slang_source_manager = *mut slang_source_manager_t;
pub type slang_syntax_tree = *mut slang_syntax_tree_t;
pub type slang_compilation = *mut slang_compilation_t;
pub type slang_diagnostics = *mut slang_diagnostics_t;
pub type slang_options = *mut slang_options_t;

#[repr(C)]
pub struct slang_constant_t {
    _private: [u8; 0],
}
#[repr(C)]
pub struct slang_svint_t {
    _private: [u8; 0],
}
pub type slang_constant = *mut slang_constant_t;
pub type slang_svint = *mut slang_svint_t;

#[repr(C)]
#[derive(Clone, Copy, Debug, Default)]
pub struct slang_svint_flat {
    pub value: i64,
    pub bit_width: u32,
    pub is_signed: bool,
    pub has_unknown: bool,
}

pub type slang_constant_kind = c_uint;
pub const SLANG_CONSTANT_BAD: slang_constant_kind = 0;
pub const SLANG_CONSTANT_INTEGER: slang_constant_kind = 1;
pub const SLANG_CONSTANT_REAL: slang_constant_kind = 2;
pub const SLANG_CONSTANT_SHORTREAL: slang_constant_kind = 3;
pub const SLANG_CONSTANT_STRING: slang_constant_kind = 4;
pub const SLANG_CONSTANT_NULL: slang_constant_kind = 5;
pub const SLANG_CONSTANT_UNBOUNDED: slang_constant_kind = 6;
pub const SLANG_CONSTANT_UNPACKED: slang_constant_kind = 7;
pub const SLANG_CONSTANT_MAP: slang_constant_kind = 8;
pub const SLANG_CONSTANT_QUEUE: slang_constant_kind = 9;
pub const SLANG_CONSTANT_UNION: slang_constant_kind = 10;

// ---- Positions --------------------------------------------------------------

#[repr(C)]
#[derive(Clone, Copy, Debug)]
pub struct slang_node {
    pub ptr: *const c_void,
    pub tree: slang_syntax_tree,
    pub kind: u32,
    pub reserved_: u32,
}

#[repr(C)]
#[derive(Clone, Copy, Debug)]
pub struct slang_token {
    pub owner: *const c_void,
    pub tree: slang_syntax_tree,
    pub index: u32,
    pub kind: u16,
    pub flags: u16,
}

pub type slang_token_flag = c_uint;
pub const SLANG_TOKEN_MISSING: slang_token_flag = 1 << 0;

pub type slang_ast_domain = c_uint;
pub const SLANG_AST_SYMBOL: slang_ast_domain = 0;
pub const SLANG_AST_EXPRESSION: slang_ast_domain = 1;
pub const SLANG_AST_STATEMENT: slang_ast_domain = 2;
pub const SLANG_AST_TIMING_CONTROL: slang_ast_domain = 3;
pub const SLANG_AST_CONSTRAINT: slang_ast_domain = 4;
pub const SLANG_AST_ASSERTION_EXPR: slang_ast_domain = 5;
pub const SLANG_AST_BINS_SELECT_EXPR: slang_ast_domain = 6;
pub const SLANG_AST_PATTERN: slang_ast_domain = 7;

#[repr(C)]
#[derive(Clone, Copy, Debug)]
pub struct slang_ast {
    pub ptr: *const c_void,
    pub compilation: slang_compilation,
    pub kind: u32,
    pub domain: u32,
}

// The value-struct ABI. Sizes are also `static_assert`ed on the C side; the
// field offsets below (LP64) are the Rust-side ABI golden — a field reorder
// keeps the size identical but silently corrupts every read across the FFI, so
// pin the offsets, not just the sizes. Guarded to 64-bit native (the only
// target sv-lang-sys links a native slang for; the wasm backend is separate).
#[cfg(target_pointer_width = "64")]
const _: () = {
    use core::mem::{offset_of, size_of};

    assert!(size_of::<slang_node>() == 24);
    assert!(size_of::<slang_token>() == 24);
    assert!(size_of::<slang_ast>() == 24);
    assert!(size_of::<slang_loc>() == 16);
    assert!(size_of::<slang_range>() == 32);
    assert!(size_of::<slang_error>() == 252);
    assert!(size_of::<slang_str>() == 24);
    assert!(size_of::<slang_diag>() == 32);

    assert!(offset_of!(slang_node, ptr) == 0);
    assert!(offset_of!(slang_node, tree) == 8);
    assert!(offset_of!(slang_node, kind) == 16);

    assert!(offset_of!(slang_token, owner) == 0);
    assert!(offset_of!(slang_token, tree) == 8);
    assert!(offset_of!(slang_token, index) == 16);
    assert!(offset_of!(slang_token, kind) == 20);
    assert!(offset_of!(slang_token, flags) == 22);

    assert!(offset_of!(slang_ast, ptr) == 0);
    assert!(offset_of!(slang_ast, compilation) == 8);
    assert!(offset_of!(slang_ast, kind) == 16);
    assert!(offset_of!(slang_ast, domain) == 20);

    assert!(offset_of!(slang_str, data) == 0);
    assert!(offset_of!(slang_str, len) == 8);
    assert!(offset_of!(slang_str, owner) == 16);

    assert!(offset_of!(slang_error, status) == 0);
    assert!(offset_of!(slang_error, message) == 4);

    assert!(offset_of!(slang_loc, buffer) == 0);
    assert!(offset_of!(slang_loc, offset) == 8);

    assert!(offset_of!(slang_diag, code) == 0);
    assert!(offset_of!(slang_diag, location) == 8);
    assert!(offset_of!(slang_diag, note_count) == 24);
    assert!(offset_of!(slang_diag, range_count) == 28);
};

// ---- Kind reflection --------------------------------------------------------

pub type slang_member_form = c_uint;
pub const SLANG_MEMBER_TOKEN: slang_member_form = 0;
pub const SLANG_MEMBER_NODE: slang_member_form = 1;
pub const SLANG_MEMBER_OPTIONAL_NODE: slang_member_form = 2;
pub const SLANG_MEMBER_LIST: slang_member_form = 3;
pub const SLANG_MEMBER_SEPARATED_LIST: slang_member_form = 4;
pub const SLANG_MEMBER_TOKEN_LIST: slang_member_form = 5;

// ---- Options ----------------------------------------------------------------

pub type slang_language_version = c_uint;
pub const SLANG_LANGUAGE_1364_2005: slang_language_version = 0;
pub const SLANG_LANGUAGE_1800_2017: slang_language_version = 1;
pub const SLANG_LANGUAGE_1800_2023: slang_language_version = 2;

pub type slang_compilation_flag = c_uint;
pub const SLANG_COMP_ALLOW_HIERARCHICAL_CONST: slang_compilation_flag = 1 << 0;
pub const SLANG_COMP_RELAX_ENUM_CONVERSIONS: slang_compilation_flag = 1 << 1;
pub const SLANG_COMP_ALLOW_USE_BEFORE_DECLARE: slang_compilation_flag = 1 << 2;
pub const SLANG_COMP_ALLOW_TOP_LEVEL_IFACE_PORTS: slang_compilation_flag = 1 << 3;
pub const SLANG_COMP_LINT_MODE: slang_compilation_flag = 1 << 4;
pub const SLANG_COMP_IGNORE_UNKNOWN_MODULES: slang_compilation_flag = 1 << 5;
pub const SLANG_COMP_RELAX_STRING_CONVERSIONS: slang_compilation_flag = 1 << 6;
pub const SLANG_COMP_ALLOW_RECURSIVE_IMPLICIT_CALL: slang_compilation_flag = 1 << 7;
pub const SLANG_COMP_ALLOW_BARE_VAL_PARAM_ASSIGNMENT: slang_compilation_flag = 1 << 8;
pub const SLANG_COMP_ALLOW_SELF_DETERMINED_STREAM_CONCAT: slang_compilation_flag = 1 << 9;
pub const SLANG_COMP_ALLOW_MERGING_ANSI_PORTS: slang_compilation_flag = 1 << 10;
pub const SLANG_COMP_DISABLE_INSTANCE_CACHING: slang_compilation_flag = 1 << 11;
pub const SLANG_COMP_DISALLOW_REFS_TO_UNKNOWN_INSTANCES: slang_compilation_flag = 1 << 12;
pub const SLANG_COMP_ALLOW_UNNAMED_GENERATE: slang_compilation_flag = 1 << 13;
pub const SLANG_COMP_ALLOW_VIRTUAL_IFACE_WITH_OVERRIDE: slang_compilation_flag = 1 << 14;
pub const SLANG_COMP_ALLOW_ARRAY_CONCAT_ASSIGN_PATTERN: slang_compilation_flag = 1 << 15;
pub const SLANG_COMP_ALLOW_CROSS_AUTO_BIN_MAX: slang_compilation_flag = 1 << 16;
pub const SLANG_COMP_ALLOW_INVALID_TOP: slang_compilation_flag = 1 << 17;
pub const SLANG_COMP_CHECK_UNINSTANTIATED: slang_compilation_flag = 1 << 18;

// ---- Syntax nodes and tokens ------------------------------------------------

pub type slang_child_tag = c_uint;
pub const SLANG_CHILD_NONE: slang_child_tag = 0;
pub const SLANG_CHILD_NODE: slang_child_tag = 1;
pub const SLANG_CHILD_TOKEN: slang_child_tag = 2;

#[repr(C)]
#[derive(Clone, Copy)]
pub struct slang_trivia {
    pub kind: u32,
    pub reserved_: u32,
    pub text: slang_str,
}

// ---- Traversal --------------------------------------------------------------

pub type slang_visit = c_uint;
pub const SLANG_VISIT_BREAK: slang_visit = 0;
pub const SLANG_VISIT_CONTINUE: slang_visit = 1;
pub const SLANG_VISIT_SKIP: slang_visit = 2;

pub type slang_node_visitor =
    Option<unsafe extern "C" fn(node: slang_node, user: *mut c_void) -> slang_visit>;
